--- a/nuribom/log2.html
+++ b/nuribom/log2.html
@@ -143,7 +143,7 @@
 <body>
     <header class="d-flex justify-content-between align-items-center px-4">
         <div class="logo">
-            <h1><a href="index.html">Wisdom Tech</a></h1>
+            <h1><a href="log2.html">Wisdom Tech</a></h1>
         </div>
         <div class="headerBtn">
                 <button id="logout-button">로그아웃</button>
