Feat: update-nuribom

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -100,7 +100,7 @@
 
         nav .items label {
             color: #111;
-            cursor: pointer;
+            /* cursor: pointer; */
         }
 
         .modalb1, .modalb2, .modalb5, .modalb6 {
@@ -183,7 +183,7 @@
         </div>
         <div class="headerBtn">
             <div class="log-btn">
-                <label for="log">LOGIN/SIGN</label>
+                <label for="log">로그인</label>
                 <input type="checkbox" id="log">
                     <div class="l-box">
                         <div class="l-header">
