--- a/nuribom/log2.html
+++ b/nuribom/log2.html
@@ -34,7 +34,7 @@
         #logout-button{
             width: 140px;
             height: 50px;
-            background-color: #00b4d8;
+            background-color: #fff;
             border-radius: 20px;
             font-size: 17px;
         }
