Feat: update-nuribom

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -54,7 +54,7 @@
         .l-box button {
             width: 100%;
             padding: 10px;
-            background-color: #007bff;
+            background-color: #495057;
             border: none;
             color: white;
             font-weight: bold;
@@ -80,6 +80,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        .login > button:hover {
+            background-color: #6c757d;
+            transition: all 0.3s ease;
         }
 
         nav {
