--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -183,7 +183,7 @@
 </head>
 <body>
     <header class="d-flex justify-content-between align-items-center px-4">
-        <div class="logo">
+        <div class="logo">  
             <h1><a href="index.html">Wisdom Tech</a></h1>
         </div>
         <div class="headerBtn">
@@ -299,9 +299,13 @@
     <div class="con1">
         <div class="idiom">
             <div class="idiom-main">
-                <button>&lt;</button>
+                <button><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5"/>
+                  </svg></button>
                 <li id="idiom-text">구사일생</li>
-                <button>&gt;</button>
+                <button><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"/>
+                  </svg></button>
             </div>
         </div>
     </div>
