--- a/nuribom/log2.html
+++ b/nuribom/log2.html
@@ -160,7 +160,9 @@
                 </div>
                 <div class="modalb2">
                     <div class="hint-box">
-                        <label for="modal4" id="close">확인</label>
+                        <label for="modal4" id="close"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+                          </svg></label>
                         <div class="hint-text">
                             <p>아홉 번 죽을 뻔하다 한 번 살아난다는 뜻으로 죽을 고비를 여러 번 넘기고 간신히 목숨을 건진다는 말</p>
                         </div>
@@ -172,7 +174,9 @@
                     <label for="modal5">예시</label>
                     <div class="modalb5">
                         <div class="ex-box">
-                            <label for="modal5" id="close">확인</label>
+                            <label for="modal5" id="close"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+                              </svg></label>
                             <div class="ex-text">
                                 <p>영화 속 주인공은 여러 차례 구사일생의 순간을 겪으면서 성장하게 되었다.</p>
                             </div>
@@ -186,7 +190,9 @@
                 </div>
                 <div class="modalb1">
                     <div class="box">
-                        <label for="modal3" class="close2">확인</label>
+                        <label for="modal3" class="close2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+                          </svg></label>
                         <div class="header-test">
                             <h2>오늘의 도전</h2>
                         </div>
@@ -205,7 +211,9 @@
                     <label for="modal6">복습하기</label>
                     <div class="modalb6">
                         <div class="review-box">
-                            <label for="modal6" id="close">확인</label>
+                            <label for="modal6" id="close"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+                              </svg></label>
                             <div class="review-header">
                                 <h2>기록</h2>
                             </div>
