--- a/nuribom2/index-folder/index.html
+++ b/nuribom2/index-folder/index.html
@@ -22,11 +22,11 @@
         </nav>
         <div class="sns">
             <div class="sns-items">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                <svg onclick="facebook()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
                 </svg>
             </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+            <svg onclick="instagram()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
               <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
             </svg>
             <svg onclick="github()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
@@ -41,27 +41,39 @@
                 <div class="idiom-items">
                     <div>
                         <h2>가가대소(呵呵大笑)</h2>
+                        <p>소리를 내어 크게 웃음</p>
                     </div>
                     <div>
                         <h2>불치하문(不恥下問)</h2>
+                        <p>아랫사람에게 묻는 것을 결코 부끄럽게 여기지 않는다</p>
                     </div>
                     <div>
                         <h2>심심상인(心心相印)</h2>
+                        <p>말없이 마음과 마음으로 뜻을 전함</p>
                     </div>
                     <div>
                         <h2>동분서주(東奔西走)</h2>
+                        <p>사방으로 이리저리 몹시 바쁘게 돌아다님</p>
                     </div>
                     <div>
                         <h2>금의야행(錦衣夜行)</h2>
+                        <p>비단옷을 입고 밤에 감. 아무런 보람이 없는 행동</p>
                     </div>
                     <div>
                         <h2>불편부당(不偏不黨)</h2>
+                        <p>아주 공평하여 어느 쪽으로도 치우침이 없음</p>
                     </div>
                     <div>
                         <h2>동병상련(同病相憐)</h2>
+                        <p>서로 가엾게 여긴다는 뜻으로 어려운 처지에 있는 사람끼리 서로 동정하고 공감한다</p>
                     </div>
                     <div>
                         <h2>살신성인(殺身成仁)</h2>
+                        <p>자기 몸을 희생하여 옳은 일을 이룬다</p>
+                    </div>
+                    <div>
+                        <h2>각자도생(各自圖生)</h2>
+                        <p>제각기 살아 나갈 방법을 꾀함</p>
                     </div>
                 </div>
             </div>
