--- a/nuribom2/test-folder/index.html
+++ b/nuribom2/test-folder/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1><a href="/nuribom2/index-folder/index.html">Idioms Tech</a></h1>
+            <h1><a href="/nuribom2/index-folder/index.html">Idiom Tech</a></h1>
         </div>
     </header>
     <div class="con1">
