Feat: nuribom-ver2

--- a/nuribom2/index-folder/index.html
+++ b/nuribom2/index-folder/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
-    <title>누리봄 프로젝트2ver</title>
+    <title>누리봄 프로젝트</title>
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="index.html">홈으로</a></li>
                 <li><a href="/nuribom2/test-folder/index.html">시험</a></li>
-                <li><a href="#">공부</a></li>
+                <li><a href="/nuribom2/study-folder/index.html">명언</a></li>
                 <li><a href="#">복습</a></li>
             </ul>
         </nav>
