Feat: nuribom-project-ver2

--- a/nuribom2/index-folder/index.html
+++ b/nuribom2/index-folder/index.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">홈으로</a></li>
                 <li><a href="/nuribom2/test-folder/index.html">시험</a></li>
                 <li><a href="/nuribom2/study-folder/index.html">명언</a></li>
-                <li><a href="#">복습</a></li>
+                <li><a href="/nuribom2/communication-folder/index.html">소통</a></li>
             </ul>
         </nav>
         <div class="sns">
