--- a/nuribom2/study-folder/index.html
+++ b/nuribom2/study-folder/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
-    <title>공부 사이트</title>
+    <title>사자성어 명언</title>
 </head>
 <body>
     <header>
-        <h1>사자성어 명언 추천</h1>
+        <div class="logo">
+            <a href="/nuribom2/index-folder/index.html"><h1>Idiom Tech</h1></a>
+        </div>
     </header>
 
     <main>
@@ -23,8 +25,10 @@
             </select>
         </div>
 
+        <div class="image-display" id="imageDisplay"></div>
+
         <div class="quote-display" id="quoteDisplay">
-            <p>관련 명언이 여기에 표시됩니다.</p>
+            <p>관련 명언이 사진과 함께 여기에 표시됩니다.</p>
         </div>
     </main>
 </body>
