Feat: nuribom-project-ver2

--- a/nuribom2/index-folder/index.html
+++ b/nuribom2/index-folder/index.html
@@ -88,6 +88,9 @@
         </div>
 
         <div class="con2">
+            <div class="select">
+                
+            </div>
             <div class="idiom-items2">
                 <div>
                     <h2>역지사지(易地思之)</h2> 
