--- a/nuribom2/study-folder/index.html
+++ b/nuribom2/study-folder/index.html
@@ -25,7 +25,15 @@
             </select>
         </div>
 
+        <!-- 사자성어 이름과 뜻을 표시할 영역 추가 -->
+        <div id="idiomInfo">
+            <h2 id="idiomName"></h2>
+            <p id="idiomDescription"></p>
+        </div>
+
         <div class="image-display" id="imageDisplay"></div>
+
+        .
 
         <div class="quote-display" id="quoteDisplay">
             <p>관련 명언이 사진과 함께 여기에 표시됩니다.</p>
