--- a/nuribom2/test-folder/index.html
+++ b/nuribom2/test-folder/index.html
@@ -16,10 +16,15 @@
     <div class="con1">
         <div class="quiz-area">
             <p id="quiz-question">다음 사자성어의 뜻은 무엇인가요?</p>
-            <ul id="quiz-options">
-                <!-- 선택지가 JavaScript에서 동적으로 추가됩니다 -->
-            </ul>
+            <p id="quiz-status"></p>
+            <ul id="quiz-options"></ul>
+
+            <div class="btn-items">
+                <button id="hint-button">힌트</button>
+                <button id="dont-know-button">잘 모르겠습니다</button>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
