--- a/nuribom2/index-folder/index.html
+++ b/nuribom2/index-folder/index.html
@@ -89,12 +89,7 @@
 
         <div class="con2">
             <div class="select">
-                <input type="search">
-                <div class="search-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                      </svg>
-                </div>
+                <input type="search" placeholder="사자성어를 검색 해 보세요!">
             </div>
             <div class="idiom-items2">
                 <div>
@@ -135,8 +130,6 @@
                 </div>
                 </div>
         </div>
-    </div>
-
-    
+    </div>    
 </body>
 </html>
