Feat: nuribom-project-ver2

--- a/nuribom2/index-folder/index.html
+++ b/nuribom2/index-folder/index.html
@@ -89,7 +89,7 @@
 
         <div class="con2">
             <div class="select">
-                <input type="search" placeholder="사자성어를 검색 해 보세요!">
+                <input type="search" id="search-input" placeholder="사자성어를 검색 해 보세요!">
             </div>
             <div class="idiom-items2">
                 <div>
@@ -127,6 +127,110 @@
                 <div>
                     <h2>고진감래(苦盡甘來)</h2>
                     <p>괴로움이 다하면 달콤함이 온다는 뜻으로 고생 끝에 낙이 온다는 말</p>
+                </div>
+                <div>
+                    <h2>갑남을녀(甲男乙女)</h2>
+                    <p>평범한 남자와 여자를 의미하며, 특별할 것 없는 일반 사람들을 일컫는 말입니다.</p>
+                </div>
+                <div>
+                    <h2>각골난망(刻骨難忘)</h2>
+                    <p>뼈에 새길 정도로 잊기 어려운 은혜를 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>과유불급(過猶不及)</h2>
+                    <p>지나치면 미치지 못한 것과 같다는 뜻으로, 지나침이 모자람과 같음을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>막상막하(莫上莫下)</h2>
+                    <p>서로 비슷하여 우열을 가리기 어려운 상황을 나타냅니다.</p>
+                </div>
+                <div>
+                    <h2>고복격양(鼓腹擊壌)</h2>
+                    <p>배를 두드리며 땅을 치는 모습으로, 태평하고 안락한 삶을 즐기는 것을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>불철주야(不撤晝夜)</h2>
+                    <p>밤낮을 가리지 않고, 끊임없이 노력을 한다는 뜻입니다.</p>
+                </div>
+                <div>
+                    <h2>명약관화(明若觀火)</h2>
+                    <p>불을 보는 것처럼 분명하게 알 수 있다는 의미입니다.</p>
+                </div>
+                <div>
+                    <h2>동상이몽(同床異夢)</h2>
+                    <p>같은 자리에서 자지만 서로 다른 꿈을 꾼다는 뜻으로, 같은 처지에 있으면서도 생각이나 목표가 다른 상황을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>이심전심(以心傳心)</h2>
+                    <p>마음에서 마음으로 전한다는 뜻으로, 말 없이 서로의 마음을 이해하는 것을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>진퇴양난(進退兩難)</h2>
+                    <p>나아갈 수도, 물러날 수도 없는 곤란한 상황을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>미생지신(未生之信)</h2>
+                    <p>태어나지 않은 것에 대한 믿음을 의미하며, 미지의 가능성을 믿는 것을 뜻합니다.</p>
+                </div>
+                <div>
+                    <h2>타전진기(他山之石)</h2>
+                    <p>다른 사람의 실수나 실패가 나에게 교훈이 되는 것을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>고장난명(孤掌難鳴)</h2>
+                    <p>한 사람의 힘으로는 일을 이룰 수 없음을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>상전벽해(桑田碧海)</h2>
+                    <p>뽕나무 밭이 푸른 바다로 변한다는 뜻으로, 세상의 변화가 매우 크고 빠르다는 의미입니다.</p>
+                </div>
+                <div>
+                    <h2>일촉즉발(一觸即發)</h2>
+                    <p>한 번의 작은 자극으로도 즉시 폭발할 수 있는 상황을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>풍전등화(風前燈火)</h2>
+                    <p>바람 앞의 등불처럼 매우 위태로운 상황을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>여리박빙(如履薄氷)</h2>
+                    <p>얇은 얼음을 밟는 것처럼 조심스럽게 행동해야 할 상황을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>미혹천하(迷惑天下)</h2>
+                    <p>세상을 혼란에 빠뜨리는 것을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>남가일몽(南柯一夢)</h2>
+                    <p>남쪽의 나무 그늘에서의 꿈이라는 뜻으로, 한 순간의 헛된 꿈을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>거안사위(擧案齊眉)</h2>
+                    <p>음식을 두 손으로 고르게 들어올리는 모습으로, 남편을 존중하는 아내의 태도를 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>양두구육(羊頭狗肉)</h2>
+                    <p>양의 머리와 개의 고기를 파는 것으로, 겉과 속이 다르다는 의미입니다.</p>
+                </div>
+                <div>
+                    <h2>세한고독(歲寒孤獨)</h2>
+                    <p>추운 겨울에도 굳건하게 살아남는 것처럼, 어려운 상황에서도 의지를 잃지 않는다는 뜻입니다.</p>
+                </div>
+                <div>
+                    <h2>주마간담(走馬看淡)</h2>
+                    <p>말을 타고 지나가며 간단히 살펴본다는 뜻으로, 겉으로만 대충 보고 지나치는 것을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>일석이조(一石二鳥)</h2>
+                    <p>한 번의 노력으로 두 가지 이익을 얻는 것을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>금시초문(今時初聞)</h2>
+                    <p>지금 듣는 것이 처음이라는 뜻으로, 전혀 경험이 없는 것을 의미합니다.</p>
+                </div>
+                <div>
+                    <h2>형설지공(螢雪之功)</h2>
+                    <p>반딧불과 눈의 공으로, 어려운 환경에서도 공부하여 이룬 성과를 의미합니다.</p>
                 </div>
                 </div>
         </div>
