--- a/nuribom2/study-folder/index.html
+++ b/nuribom2/study-folder/index.html
@@ -22,7 +22,11 @@
                 <option value="불치하문 (不恥下問)">불치하문 (不恥下問)</option>
                 <option value="살신성인 (殺身成仁)">살신성인 (殺身成仁)</option>
                 <option value="심심상인 (心心相印)">심심상인 (心心相印)</option>
+                <option value="일취월장 (日就月將)">일취월장 (日就月將)</option>
+                <option value="과유불급 (過猶不及)">과유불급 (過猶不及)</option>
+                <option value="타산지석 (他山之石)">타산지석 (他山之石)</option>
             </select>
+            
         </div>
 
         <div id="idiomInfo">
